2011-03-11  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/CommandTypeFactory.h: Continue cleaning conflicts
	related stuff.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/dmcs/StreamingDMCS.h: Likewise.

2011-03-10  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/ConflictNotification.h: On cleaning conflicts
	related stuff.
	* include/dmcs/OutputNotification.h: Likewise.
	* include/dmcs/StreamingDMCS.h: Likewise.
	* include/dmcs/StreamingForwardMessage.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/JoinThread.h: Likewise.
	* include/network/NeighborOut.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* src/network/ConcurrentMessageDispatcher.cpp: More debugging information.

	* src/dmcs/StreamingDMCS.cpp: Send different messages to different neighbors.

	* include/network/NeighborOut.h: Comment out some delete for debugging.
	* include/network/RouterThread.h: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

2011-03-09  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Initialize input for the sake of safety.

	* src/dmcs/StreamingDMCS.cpp: Don't mix ConflictNotification sent
	to different NeighborOut.

	* include/dmcs/StreamingForwardMessage.h: Decision can be NULL.

2011-02-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcsc.cpp: Write result even in non-debug mode.

	* src/dyndmcs/DynamicConfiguration.cpp: Run in non-inequality