@@ -18,7 +18,6 @@ noinst_HEADERS =  \
 		NeighborOut.h \
 		NeighborThread.h \
 		OutputThread.h \
-		RouterThread.h \
 		Server.h \
 		Session.h \
 		StreamingDMCSThread.h \
